register command for removing a link (bug 193716); r=mkaply, sr=smfr, a=asa